# 61426

./: .gitignore  15mTOOL_rows.csv  5m.csv  AUTOMATED_RUN_NOTES.md  CLAUDE.md  CONTEXT.md  ENGINE_PROBLEMS.md  NEXT-PLAN.md  SUMMARY.md  UPDATED_PROJECT_SUMMARY.md  VERCEL_INTEGRATION.md  Vincent_Vitolo_Employment_Offer_Letter.docx  _cards.json  _net.json  _tape.json  issues.md  o.csv  updown-liquidity-overlap-v4.html  v4.md  v8_corpus.tar.gz.sha256  v8_corpus.zip.sha256  vm-pm.md
tools/: CONTRACT.md  README.md  add-signal-sums.py  build-v8-corpus.py  conftest.py  pull-new-autopsy-logs.py  pyproject.toml  rewrite-v6-v7s-as-v8.mjs  test-dashboard-sidebar.mjs  test_rewrite_v6_v7s_as_v8.mjs  v8-corpus-replay.mjs
tools/analysis/: METHODOLOGY.md  RUNBOOK.md  __init__.py  artifact.py  grade.py  ledger.jsonl  run_market_analysis.py  scoreboard.json
tools/autopsy-sync/: README.md  autopsy_sync.py  run.sh  test_autopsy_sync.py
tools/log-clean/: README.md  clean-logs.py  purged-manifest.txt
tools/polymarket_tools/: __init__.py  client.py  fanout.py  normalize.py  registry.py  schema.py  server.py  ws_manager.py
tools/polymarket_tools/fairvalue/: __init__.py  anchor.py  coherence.py
tools/polymarket_tools/tools/: __init__.py  get_book.py  get_clob_market.py  get_event.py  get_holders.py  get_last_trade_price.py  get_live_volume.py  get_market.py  get_midpoint.py  (+14 more)
tools/tests/: test_anchor.py  test_artifact.py  test_coherence.py  test_grade.py  test_portfolio_value.py  test_positions.py  test_profile_activity.py  test_registry_count.py  test_run_spine.py  test_scorecard.py
(+1866 files in other folders)
