[project]
name = "polymarket-tools"
version = "0.1.0"
description = "Persistent MCP server of Polymarket public-read tools (Gamma + Data + CLOB) with a shared keep-alive client, concurrent fan-out, and normalized responses."
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx[http2]>=0.27",
    "websockets>=12",
]

[project.scripts]
polymarket-tools = "polymarket_tools.server:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["polymarket_tools"]

[tool.pytest.ini_options]
markers = [
    "live: hits the live Polymarket public API (opt-in, network required)",
]
